@@ -35,3 +35,4 @@ New internal features:
 - Added specific roles to be filtered for Blog portal type to
   'getCPSCandidateLocalRoles' method in MemberShip tool untill we have flexible
   solution for such use cases.
+- Cleaner API for local roles blocking/unblocking
